(Bugfix) Fix deleting of ratings, click-handler on mobile

--- a/client/style.css
+++ b/client/style.css
@@ -277,6 +277,8 @@ MAIN
   top: 5px;
   right: 5px;
   color: #f66;
+  font-size: 20px;
+  cursor: pointer;
 }
 /***********************
 
